# chatgpt-desktop

./: README.md
.github/workflows/: release.yml
src-tauri/: .gitignore  .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
