[package]
name = "chatgpt-desktop"
version = "0.1.0"
description = "A ChatGPT Desktop App"
authors = ["Akagi201 <akagi201@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Akagi201/chatgpt-desktop"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri.git", tag = "tauri-v2.0.0-beta.2", features = [] }

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri.git", tag = "tauri-v2.0.0-beta.2", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
